changed the color of <hr> nad fixed a spacing bug

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ p {
 }
 
 hr {
-  color: lightgrey;
+  color: rgb(255, 238, 198)
   font-family: "font", monospace;
   font-weight: 500;
   font-style: bold;
